<resources>
    <string name="app_name">AllSetHome</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="booking">My Booking</string>
    <string name="address">My Address</string>
    <string name="password">Reset Password</string>
    <string name="about">About Us</string>
    <string name="privacy">Privacy Policy</string>
    <string name="contact">Contact Us</string>
    <string name="terms">Terms and Condition</string>
</resources>