<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.ronak.allsethome.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_booking"
        android:name="com.ronak.allsethome.ui.booking.My_Booking"
        android:label="@string/booking"
        tools:layout="@layout/fragment_booking" />

    <fragment
        android:id="@+id/nav_address"
        android:name="com.ronak.allsethome.ui.address.My_Address"
        android:label="@string/address"
        tools:layout="@layout/fragment_address" />

    <fragment
        android:id="@+id/nav_reset_password"
        android:name="com.ronak.allsethome.ui.resetpassword.Reset_Password"
        android:label="@string/password"
        tools:layout="@layout/fragment_reset_password" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.ronak.allsethome.ui.dynemic.Pages"
        android:label="@string/about"
        tools:layout="@layout/fragment_pages" />

    <fragment
        android:id="@+id/nav_privacy_policy"
        android:name="com.ronak.allsethome.ui.dynemic.Pages"
        android:label="@string/privacy"
        tools:layout="@layout/fragment_pages" />

    <fragment
        android:id="@+id/nav_contact_us"
        android:name="com.ronak.allsethome.ui.dynemic.Pages"
        android:label="@string/contact"
        tools:layout="@layout/fragment_pages" />

    <fragment
        android:id="@+id/nav_terms_and_condition"
        android:name="com.ronak.allsethome.ui.dynemic.Pages"
        android:label="@string/terms"
        tools:layout="@layout/fragment_pages" />

</navigation>